fixed settings label spacing

--- a/src/styles/layout/_ui.scss
+++ b/src/styles/layout/_ui.scss
@@ -604,8 +604,9 @@
     
 
     &__section-label{
-        min-width: 14rem;
+        min-width: 18rem;
         font-weight: bold;
+       
 
         @include respond("tab-port"){
             margin-bottom: .5rem;
